# Qt-calculator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mainwindow.cpp  test.yml
Calculator/: CMakeLists.txt  CONTRIBUTING.md  Calculator.pro  Calculator.pro.qtds  Calculator.pro.user.bfea39d  Calculator_old.pro  Calculator_resources.qrc  LICENSE.md  binary_operation_handler.cpp  binary_operation_handler.h  convertcm.cpp  convertcm.h  convertcm.ui  convertor.ui  currencyconvertermainwindow.cpp  currencyconvertermainwindow.h  currencyconvertermainwindow.ui  equals_handler.cpp  equals_handler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nameconvertormainwindow.cpp  nameconvertormainwindow.h  nameconvertormainwindow.ui  stylesheethelper.cpp  stylesheethelper.h  theme.h  unary_operation_handler.cpp  unary_operation_handler.h  unitconvert.cpp  unitconvert.h  unitconvert.ui  unitconvertormainwindow.cpp  unitconvertormainwindow.h  unitconvertormainwindow.ui
Calculator/include/: mainwindow.h
Calculator/source/: main.cpp  mainwindow.cpp
Calculator/ui/latest/: mainwindow.ui
Calculator/ui/old/: mainwindow.ui
Calculator_Unit_Testing/: Calculator_Unit_Testing.pro  qtCalc_unit_tests.cpp  qtCalc_unit_tests.h  tst_unit_tests.cpp
build-Calculator-Desktop_Qt_5_15_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-Calculator-Desktop_Qt_5_15_1_GCC_64bit-Debug/: Calculator  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-Calculator_Unit_Testing-Desktop_x86_windows_msvc2019_pe_32bit-Profile/: .qmake.stash  (+5 more)
(+10 files in other folders)
